# learnnov

./: .coveragerc  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile.prod  INCIDENT_RESPONSE.md  Makefile  PRIVACY_POLICY.md  README.md  cloudbuild.yaml  docker-compose.yml  nginx.conf  render.yaml
.github/: dependabot.yml
.github/workflows/: bandit-sarif.yml  ci.yml  docker-build.yml  gke-deploy.yml  security.yml  security_audit.yml
learnnov-cloud/: .gitignore  README.md  bandit_report.json  build.sh  clamav_scanner.py  deploy.bat  push_render_update.bat  render.yaml  requirements.txt  run_setup.bat  test_advisor.py
learnnov-cloud/apps/: __init__.py
learnnov-cloud/backups/: db_backup_20260525_184633.json.enc
learnnov-cloud/config/: settings.py  urls.py  wsgi.py
learnnov-cloud/k8s/: backup-cronjob.yaml  configmap.yaml  deployment-django.yaml  deployment-openedx.yaml  grafana-deployment.yaml  hpa.yaml  ingress.yaml  job-migrate.yaml  migration-job.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres-backup-cronjob.yaml  prometheus-deployment.yaml  secrets.yaml  service-account.yaml  service-django.yaml  service-openedx.yaml
learnnov-cloud/templates/: index.html
learnnov-web/: next.config.ts  package-lock.json  package.json
monitoring/: prometheus.yml
openedx-platform-master/: bandit_low_issues.csv  extract_bandit_low.py  extract_todo.py  package-lock.json  package.json  security_audit_report_extended.csv  todo_fixme.csv
tutor-learnnov/: pyproject.toml
tutor-learnnov/tutorlearnnov/: plugin.py
(+506 files in other folders)
